------------------------------------------------------------------------
r420 | thesystems | 2007-07-29 14:05:29 -0500 (Sun, 29 Jul 2007) | 1 line

Christine 0.1
------------------------------------------------------------------------
r421 | thesystems | 2007-07-30 12:01:31 -0500 (Mon, 30 Jul 2007) | 1 line

Better python module check out
------------------------------------------------------------------------
r423 | thesystems | 2007-08-01 14:57:02 -0500 (Wed, 01 Aug 2007) | 1 line

Fixed bug #1765625
------------------------------------------------------------------------
r424 | thesystems | 2007-08-01 14:57:45 -0500 (Wed, 01 Aug 2007) | 1 line

'print's removed
------------------------------------------------------------------------
r425 | thesystems | 2007-08-01 15:10:35 -0500 (Wed, 01 Aug 2007) | 1 line

Fixed bug #1765629 [http://sourceforge.net/tracker/index.php?func=detail&aid=1765629&group_id=167966&atid=845044]
------------------------------------------------------------------------
r426 | thesystems | 2007-08-02 10:39:13 -0500 (Thu, 02 Aug 2007) | 1 line

bugfixes
------------------------------------------------------------------------
r427 | thesystems | 2007-08-02 11:29:44 -0500 (Thu, 02 Aug 2007) | 1 line

Fixes bug #1765723 [http://sourceforge.net/tracker/index.php?func=detail&aid=1765723&group_id=167966&atid=845044]
------------------------------------------------------------------------
r429 | demrit | 2007-08-04 23:03:08 -0500 (Sat, 04 Aug 2007) | 2 lines

n0sferatu fixed a problem with the title and list reported by pcero

------------------------------------------------------------------------
r430 | thesystems | 2007-08-05 13:11:29 -0500 (Sun, 05 Aug 2007) | 20 lines

M    christine/libchristine/Player.py
	Trying to improve the visualiztion stuff
M    christine/libchristine/Christine.py.in
	Fixed bug # 1767980 [http://sourceforge.net/tracker/index.php?func=detail&aid=1767980&group_id=167966&atid=845044]