@@ -1,13 +1,6 @@
-scriptsdir = @PYTHON_LIB_DIR@/libchristine/gui/
+scriptsdir = @PYTHON_LIB_DIR@/libchristine/christine_dbus/
 
-scripts_DATA=__init__.py \
-			About.py \
-			BugReport.py \
-			Display.py \
-			Preferences.py \
-			GtkMisc.py \
-			christineNotify.py \
-			openRemote.py
+scripts_DATA=__init__.py
 
 DISTFILES=Makefile.in \
 			${scripts_DATA}
