@@ -1,10 +1,11 @@
-scriptsdir = @PYTHON_LIB_DIR@/libchristine/pattern
+scriptsdir = @PYTHON_LIB_DIR@/libchristine/pattern/
 
 scripts_DATA=__init__.py \
 			 Singleton.py
-DISTFILES= Makefile.in \
+			 
+DISTFILES=Makefile.in \
 		   __init__.py \
-			Singleton.py 
+		   Singleton.py 
 
 
 pkgdatadir=${datadir}
