@@ -1,18 +1,27 @@
-	../gui/about.glade \ \
-	../gui/add_files.glade \ \
-	../gui/delete_file_from_disk_dialog.glade \ \
-	../gui/dir_selector.glade \ \
-	../gui/error.glade \ \
-	../gui/file_selector.glade \ \
-	../gui/icon_view.glade \ \
-	../gui/jump_to.glade \ \
-	../gui/main_window.glade \ \
-	../gui/miniviewer.glade \ \
-	../gui/open_remote.glade \ \
-	../gui/popmenu.glade \ \
-	../gui/preferences.glade \ \
-	../gui/properties.glade \ \
-	../gui/sources_treeview.glade \ \
-	../gui/tray_menu.glade \ \
-	../gui/treeview.glade \ \
-	../gui/treeview_reorderable.glade
+	../gui/About.glade \ \
+	../gui/addFiles.glade \ \
+	../gui/deleteFileFromDisk.glade \ \
+	../gui/deleteQuestion.glade \ \
+	../gui/directorySelector.glade \ \
+	../gui/Error.glade \ \
+	../gui/errorReporter.glade \ \
+	../gui/FileSelector.glade \ \
+	../gui/genericQuestion.glade \ \
+	../gui/iconView.glade \ \
+	../gui/JumpTo.glade \ \
+	../gui/mainWindow.glade \ \
+	../gui/MenuTrayIcon.glade \ \
+	../gui/miniViewer.glade \ \
+	../gui/NewSourceDialog.glade \ \
+	../gui/openRemote.glade \ \
+	../gui/plugin_lastfm_main.glade \ \
+	../gui/plugin_pidgin_main.glade \ \
+	../gui/PopupMenu.glade \ \
+	../gui/Preferences.glade \ \
+	../gui/Properties.glade \ \
+	../gui/SourcesList.glade \ \
+	../gui/TreeViewReorderable.glade \ \
+	../gui/TreeViewSources.glade \ \
+	../gui/twitter.glade \ \
+	../gui/walkdirectories.glade \ \
+	../gui/WindowCore.glade
